Update 2. Ley de Incentivo a la Excelencia en el Servicio Público.md

--- a/2. Ley de Incentivo a la Excelencia en el Servicio Público.md
+++ b/2. Ley de Incentivo a la Excelencia en el Servicio Público.md
@@ -1,5 +1,7 @@
 Ley de Incentivo a la Excelencia en el Servicio Público
 
+<pre>
+<p>
 Título Preliminar:
 "Ley que regula el sistema de mejora remunerativa basado en la evaluación semestral del desempeño de los funcionarios de los poderes del Estado."
 ________________________________________
@@ -81,6 +83,6 @@ o	Campañas informativas en redes sociales oficiales y mediante asociaciones civ
 3.	Auditorías y Seguridad de Datos:
 o	Se garantizará la confidencialidad de datos mediante sistemas encriptados.
 o	Auditorías independientes para evitar manipulación o sesgos en los resultados.
-
+</p>
 
 NORMATIVA PENDIENTE
