Update 2. Ley de Incentivo a la Excelencia en el Servicio Público.md

--- a/2. Ley de Incentivo a la Excelencia en el Servicio Público.md
+++ b/2. Ley de Incentivo a la Excelencia en el Servicio Público.md
@@ -84,5 +84,7 @@ o	Campañas informativas en redes sociales oficiales y mediante asociaciones civ
 o	Se garantizará la confidencialidad de datos mediante sistemas encriptados.
 o	Auditorías independientes para evitar manipulación o sesgos en los resultados.
 </p>
+</pre>
+
 
 NORMATIVA PENDIENTE
